added cargo plugin for Tomcat 8.5 support in hw2